Added new buttons and links

--- a/contact.html
+++ b/contact.html
@@ -32,41 +32,45 @@ function MM_swapImage() { //v3.0
 <body onload="MM_preloadImages('images/map/map_1_01.png','images/map/map_1_02.png','images/map/map_1_03.png','images/map/map_1_04.png','images/button_uni_1.png','images/button_living_1.png','images/button_leisure_1.png','images/button_nightlife_1.png','images/button_contact_1.png')">
 <div id="middle">
   <div id="banner"></div>
-
-
-<!-- Horizontal Menu -->
+  
+    
+  <!-- Horizontal Menu -->
 	<div id="MainNav">
 	<ul>
-		<li class="first"><a href="index.html">Home</a></li>
+		<li class="home	"><a href="index.html">Home</a></li>
 		<li><a href="uni.html">University</a></li>
 		<li><a href="living.html">Living</a></li>
 		<li><a href="leisure.html">Leisure</a></li>
 		<li><a href="nightlife.html">Nightlife</a></li>
-		<li><a href="contact.html">Contact Us</a></li>
+		<li class = "first"><a href="contact.html">Contact Us</a></li>
 	</ul>
 	</div>
-    
+  
+  
    <div class="text">
- <br />  
-     <h1>Welcome to Harmonia!</h1><br />
-     Harmonia was founded in the year 1649 by a group of intrepid explorers who stumbled on a fantastic utopian area located in the middle of the United Kingdom. Upon discovering this place they thought it best to develop it into a university town as they felt with the idilic surroundings the students in the university would perform better. Because of this development of the town started and due to the vast knowledge that the explorers had the town has prospered into the perfect university town that it now is.</div>
-   <div id="map">
-     <div id="map_01"><a href="uni.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','images/map/map_1_01.png',1)"><img src="images/map/map_01.png" name="Image1" width="473" height="198" border="0" id="Image1" /></a></div>
-     <div id="map_02"><a href="living.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','images/map/map_1_02.png',1)"><img src="images/map/map_02.png" name="Image2" width="477" height="198" border="0" id="Image2" /></a></div>
-     <div id="map_03"><a href="leisure.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image3','','images/map/map_1_03.png',1)"><img src="images/map/map_03.png" name="Image3" width="473" height="302" border="0" id="Image3" /></a></div>
-     <div id="map_04"><a href="nightlife.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image4','','images/map/map_1_04.png',1)"><img src="images/map/map_04.png" name="Image4" width="477" height="302" border="0" id="Image4" /></a></div>
+   <br />
+     <h1>Contact us</h1><br />
+     <center><p>If you think that Harmonia might be a place for you, feel free to contact us using the form below!</p></center>
+     <center><form name="form1" id="form1" method="post" action="mailto; u1051922@unimail.hud.ac.uk">
+                <table width="693" border="0">
+                  <tr>
+                    <td width="134"><strong>Email Address</strong></td>
+                    <td width="543"><input name="textfield" type="text" size="90" /></td>
+                  </tr>
+                  <tr>
+                    <td height="148"><strong>Message</strong></td>
+                    <td><textarea name="textfield" cols="85" rows="7"></textarea></td>
+                  </tr>
+                  <tr>
+                    <td><input type="reset" name="Reset" value="Reset" /></td>
+                    <td><input type="submit" name="Submit" value="Submit" /></td>
+                  </tr>
+                </table>
+              </form>
+              </center>
 </div>
-<div class="text"><h2>Harmonia - Where dreams are fabricated.</h2>
 </div>
 </div>
 </div>
-
-<!-- Footer -->
-   <div id="Footer">
-   <p>Harmonia, United Kingdom - Tel: 01484 555 555 - Copyright&copy; All Rights Reserved.
-      Last updated October 20 2010
-   </p>
-   </div>
-
 </body>
 </html>
