--- a/living.html
+++ b/living.html
@@ -32,41 +32,27 @@ function MM_swapImage() { //v3.0
 <body onload="MM_preloadImages('images/map/map_1_01.png','images/map/map_1_02.png','images/map/map_1_03.png','images/map/map_1_04.png','images/button_uni_1.png','images/button_living_1.png','images/button_leisure_1.png','images/button_nightlife_1.png','images/button_contact_1.png')">
 <div id="middle">
   <div id="banner"></div>
-
-
-<!-- Horizontal Menu -->
+    
+  <!-- Horizontal Menu -->
 	<div id="MainNav">
 	<ul>
-		<li class="first"><a href="index.html">Home</a></li>
+		<li class="home	"><a href="index.html">Home</a></li>
 		<li><a href="uni.html">University</a></li>
-		<li><a href="living.html">Living</a></li>
+		<li class = "first"><a href="living.html">Living</a></li>
 		<li><a href="leisure.html">Leisure</a></li>
 		<li><a href="nightlife.html">Nightlife</a></li>
 		<li><a href="contact.html">Contact Us</a></li>
 	</ul>
 	</div>
-    
+  
+  
    <div class="text">
- <br />  
-     <h1>Welcome to Harmonia!</h1><br />
-     Harmonia was founded in the year 1649 by a group of intrepid explorers who stumbled on a fantastic utopian area located in the middle of the United Kingdom. Upon discovering this place they thought it best to develop it into a university town as they felt with the idilic surroundings the students in the university would perform better. Because of this development of the town started and due to the vast knowledge that the explorers had the town has prospered into the perfect university town that it now is.</div>
-   <div id="map">
-     <div id="map_01"><a href="uni.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','images/map/map_1_01.png',1)"><img src="images/map/map_01.png" name="Image1" width="473" height="198" border="0" id="Image1" /></a></div>
-     <div id="map_02"><a href="living.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','images/map/map_1_02.png',1)"><img src="images/map/map_02.png" name="Image2" width="477" height="198" border="0" id="Image2" /></a></div>
-     <div id="map_03"><a href="leisure.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image3','','images/map/map_1_03.png',1)"><img src="images/map/map_03.png" name="Image3" width="473" height="302" border="0" id="Image3" /></a></div>
-     <div id="map_04"><a href="nightlife.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image4','','images/map/map_1_04.png',1)"><img src="images/map/map_04.png" name="Image4" width="477" height="302" border="0" id="Image4" /></a></div>
-</div>
-<div class="text"><h2>Harmonia - Where dreams are fabricated.</h2>
+   <br />
+     <h1>Living</h1><br />In Harmonia there is ample living space for all the students of the university. The living areas for all of the students are located in a corner of the town. With all the living areas being close to each other this means that the student accomodation is a very sociable place to live and students enjoy living there. The living space itself is split up into different buildings each housing 8 flats with between 6-8 people in each flat. The rooms that the students live in contain there own bathroom, bed, shelf space and a desk. Each and every student is also guarenteed a new computer in their room every year whilst they are at the university.<br /><br />
+The flats also contain fully functional kitchens which contain fridges, freezers, ovens, microwaves, kettles, toasters, dishwashers and also washing/dryer machines. Along with all these appliances there is also a large cupbaord for each student living in the flat. There is also a cleaning cupboard which is where the two cleaning robots are located. These robots will clean the kitchen and the students bedrooms/bathrooms.<br /><br />
+  As well as your room and the kitchen students also get access to the on-site gym, the shop and the bar/club. The gym contains a lot of equipment and is fully staffed throughout the day so if help is required the gym staff will be happy to help out. The shop is fully stocked with a wide range of groceries and receives deliveries daily.</div>
 </div>
 </div>
 </div>
-
-<!-- Footer -->
-   <div id="Footer">
-   <p>Harmonia, United Kingdom - Tel: 01484 555 555 - Copyright&copy; All Rights Reserved.
-      Last updated October 20 2010
-   </p>
-   </div>
-
 </body>
 </html>
