--- a/leisure.html
+++ b/leisure.html
@@ -32,41 +32,36 @@ function MM_swapImage() { //v3.0
 <body onload="MM_preloadImages('images/map/map_1_01.png','images/map/map_1_02.png','images/map/map_1_03.png','images/map/map_1_04.png','images/button_uni_1.png','images/button_living_1.png','images/button_leisure_1.png','images/button_nightlife_1.png','images/button_contact_1.png')">
 <div id="middle">
   <div id="banner"></div>
-
-
-<!-- Horizontal Menu -->
+    
+  <!-- Horizontal Menu -->
 	<div id="MainNav">
 	<ul>
-		<li class="first"><a href="index.html">Home</a></li>
+		<li class="home	"><a href="index.html">Home</a></li>
 		<li><a href="uni.html">University</a></li>
 		<li><a href="living.html">Living</a></li>
-		<li><a href="leisure.html">Leisure</a></li>
+		<li class = "first"><a href="leisure.html">Leisure</a></li>
 		<li><a href="nightlife.html">Nightlife</a></li>
 		<li><a href="contact.html">Contact Us</a></li>
 	</ul>
 	</div>
-    
+  
+  
    <div class="text">
- <br />  
-     <h1>Welcome to Harmonia!</h1><br />
-     Harmonia was founded in the year 1649 by a group of intrepid explorers who stumbled on a fantastic utopian area located in the middle of the United Kingdom. Upon discovering this place they thought it best to develop it into a university town as they felt with the idilic surroundings the students in the university would perform better. Because of this development of the town started and due to the vast knowledge that the explorers had the town has prospered into the perfect university town that it now is.</div>
-   <div id="map">
-     <div id="map_01"><a href="uni.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','images/map/map_1_01.png',1)"><img src="images/map/map_01.png" name="Image1" width="473" height="198" border="0" id="Image1" /></a></div>
-     <div id="map_02"><a href="living.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','images/map/map_1_02.png',1)"><img src="images/map/map_02.png" name="Image2" width="477" height="198" border="0" id="Image2" /></a></div>
-     <div id="map_03"><a href="leisure.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image3','','images/map/map_1_03.png',1)"><img src="images/map/map_03.png" name="Image3" width="473" height="302" border="0" id="Image3" /></a></div>
-     <div id="map_04"><a href="nightlife.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image4','','images/map/map_1_04.png',1)"><img src="images/map/map_04.png" name="Image4" width="477" height="302" border="0" id="Image4" /></a></div>
-</div>
-<div class="text"><h2>Harmonia - Where dreams are fabricated.</h2>
-</div>
-</div>
-</div>
+   <br />
+     <h1>Leisure</h1><br /><p>When it comes to leisure Harmonia is able to offer the best facilities around the area. Like no other city all your shopping is delivered right to your door no matter what shop you decide to go in. This means that there is no need to carry your things home from the shops as it will be done for you (at no extra cost). Also when it comes to the shops like everywhere else in the town if student discount is available in other towns it is automatically deducted from the price. <br /><br />
+If shopping isn't for you why not go down to the gym and have a work out after all that alcohol will be taking its toll. All the facilities are cheap to use and if working out isn't what you want then you could always go for a swim or join some of the teams. Remember though to be part of the team you need to be the best, there are a lot of students and not many places.<br /><br />
+Finally after a hard day at university why not go for a good pampering session. With lots of equipment and plenty of discounts book yourself in early before others get there before you. <br /><br />
 
-<!-- Footer -->
-   <div id="Footer">
-   <p>Harmonia, United Kingdom - Tel: 01484 555 555 - Copyright&copy; All Rights Reserved.
-      Last updated October 20 2010
-   </p>
-   </div>
-
+The teams
+To try out for the teams in the town you just need to contact your student union and get your name down for the trials. Below are a few of the teams:</p>
+<li>Football</li>
+<li>Rugby</li>
+<li>Javelin</li>
+<li>Badminton</li>
+<li>Tennis</li>
+</div>
+</div>
+</div>
+</div>
 </body>
 </html>
