--- a/leisure.html
+++ b/leisure.html
@@ -32,14 +32,22 @@ function MM_swapImage() { //v3.0
 <body onload="MM_preloadImages('images/map/map_1_01.png','images/map/map_1_02.png','images/map/map_1_03.png','images/map/map_1_04.png','images/button_uni_1.png','images/button_living_1.png','images/button_leisure_1.png','images/button_nightlife_1.png','images/button_contact_1.png')">
 <div id="middle">
   <div id="banner"></div>
-  <div id="navbar">
-    <div id="button_1"><a href="uni.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','images/button_uni_1.png',1)"><img src="images/button_uni.png" name="Image5" width="190" height="40" border="0" id="Image5" /></a></div>
-    <div id="button_2"><a href="living.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/button_living_1.png',1)"><img src="images/button_living.png" name="Image6" width="190" height="40" border="0" id="Image6" /></a></div>
-    <div id="button_3"><a href="leisure.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/button_leisure_1.png',1)"><img src="images/button_leisure.png" name="Image7" width="190" height="40" border="0" id="Image7" /></a></div>
-    <div id="button_4"><a href="nightlife.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/button_nightlife_1.png',1)"><img src="images/button_nightlife.png" name="Image8" width="190" height="40" border="0" id="Image8" /></a></div>
-    <div id="button_5"><a href="contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/button_contact_1.png',1)"><img src="images/button_contact.png" name="Image9" width="190" height="40" border="0" id="Image9" /></a></div>
-   </div>
+    
+  <!-- Horizontal Menu -->
+	<div id="MainNav">
+	<ul>
+		<li class="home	"><a href="index.html">Home</a></li>
+		<li><a href="uni.html">University</a></li>
+		<li><a href="living.html">Living</a></li>
+		<li class = "first"><a href="leisure.html">Leisure</a></li>
+		<li><a href="nightlife.html">Nightlife</a></li>
+		<li><a href="contact.html">Contact Us</a></li>
+	</ul>
+	</div>
+  
+  
    <div class="text">
+   <br />
      <h1>Leisure</h1><br /><p>When it comes to leisure Harmonia is able to offer the best facilities around the area. Like no other city all your shopping is delivered right to your door no matter what shop you decide to go in. This means that there is no need to carry your things home from the shops as it will be done for you (at no extra cost). Also when it comes to the shops like everywhere else in the town if student discount is available in other towns it is automatically deducted from the price. <br /><br />
 If shopping isn't for you why not go down to the gym and have a work out after all that alcohol will be taking its toll. All the facilities are cheap to use and if working out isn't what you want then you could always go for a swim or join some of the teams. Remember though to be part of the team you need to be the best, there are a lot of students and not many places.<br /><br />
 Finally after a hard day at university why not go for a good pampering session. With lots of equipment and plenty of discounts book yourself in early before others get there before you. <br /><br />
@@ -52,6 +60,11 @@ To try out for the teams in the town you just need to contact your student union
 <li>Badminton</li>
 <li>Tennis</li>
 </div>
+   <div id="footer">
+   <p>Copyright&copy; R. George, A. Eksterowicz, D. Anderson, M. Casey, N. Farnsworth. All Rights Reserved.
+      Last updated October 20 2010
+   </p>
+   </div>
 </div>
 </div>
 </div>
