--- a/living.html
+++ b/living.html
@@ -32,17 +32,36 @@ function MM_swapImage() { //v3.0
 <body onload="MM_preloadImages('images/map/map_1_01.png','images/map/map_1_02.png','images/map/map_1_03.png','images/map/map_1_04.png','images/button_uni_1.png','images/button_living_1.png','images/button_leisure_1.png','images/button_nightlife_1.png','images/button_contact_1.png')">
 <div id="middle">
   <div id="banner"></div>
-  <div id="navbar">
-    <div id="button_1"><a href="uni.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','images/button_uni_1.png',1)"><img src="images/button_uni.png" name="Image5" width="190" height="40" border="0" id="Image5" /></a></div>
-    <div id="button_2"><a href="living.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/button_living_1.png',1)"><img src="images/button_living.png" name="Image6" width="190" height="40" border="0" id="Image6" /></a></div>
-    <div id="button_3"><a href="leisure.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/button_leisure_1.png',1)"><img src="images/button_leisure.png" name="Image7" width="190" height="40" border="0" id="Image7" /></a></div>
-    <div id="button_4"><a href="nightlife.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/button_nightlife_1.png',1)"><img src="images/button_nightlife.png" name="Image8" width="190" height="40" border="0" id="Image8" /></a></div>
-    <div id="button_5"><a href="contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/button_contact_1.png',1)"><img src="images/button_contact.png" name="Image9" width="190" height="40" border="0" id="Image9" /></a></div>
-   </div>
+    
+  <!-- Horizontal Menu -->
+	<div id="MainNav">
+	<ul>
+		<li class="home	"><a href="index.html">Home</a></li>
+		<li><a href="uni.html">University</a></li>
+		<li class = "first"><a href="living.html">Living</a></li>
+		<li><a href="leisure.html">Leisure</a></li>
+		<li><a href="nightlife.html">Nightlife</a></li>
+		<li><a href="contact.html">Contact Us</a></li>
+	</ul>
+	</div>
+  
+  
    <div class="text">
-     <h1>Living</h1><br />In Harmonia there is ample living space for all the students of the university. The living areas for all of the students are located in a corner of the town. With all the living areas being close to each other this means that the student accomodation is a very sociable place to live and students enjoy living there. The living space itself is split up into different buildings each housing 8 flats with between 6-8 people in each flat. The rooms that the students live in contain there own bathroom, bed, shelf space and a desk. Each and every student is also guarenteed a new computer in their room every year whilst they are at the university.<br /><br />
-The flats also contain fully functional kitchens which contain fridges, freezers, ovens, microwaves, kettles, toasters, dishwashers and also washing/dryer machines. Along with all these appliances there is also a large cupbaord for each student living in the flat. There is also a cleaning cupboard which is where the two cleaning robots are located. These robots will clean the kitchen and the students bedrooms/bathrooms.<br /><br />
-  As well as your room and the kitchen students also get access to the on-site gym, the shop and the bar/club. The gym contains a lot of equipment and is fully staffed throughout the day so if help is required the gym staff will be happy to help out. The shop is fully stocked with a wide range of groceries and receives deliveries daily.</div>
+   <br />
+     <h1>Living</h1><br />In Harmonia there is ample living space for all the students of the university. The living areas for all of the students are located in a corner of the town. With all the living areas being close to each other this means that the student accomodation is a very sociable place to live and students enjoy living there. The living space itself is split up into different buildings each housing 8 flats with between 6-8 people in each flat. The rooms that the students live in contain there own bathroom, bed, shelf space and a desk. Each and every student is also guarenteed a new computer in their room every year whilst they are at the university. <br /><br />
+
+The flats also contain fully functional kitchens which contain fridges, freezers, ovens, microwaves, kettles, toasters, dishwashers and also washing/dryer machines. Along with all these appliances there is also a large cupbaord for each student living in the flat. There is also a cleaning cupboard which is where the two cleaning robots are located. These robots will clean the kitchen and the students bedrooms/bathrooms. <br /><br />
+
+Aswell as your room and the kitchen students also get access to the onsite gym, the shop and the bar/club. The gym contains a lot of equipment and is fully staffed throughout the day so if help is required the gym staff will be happy to help out. The shop is fully stocked with a wide range of groceries and recieves deliveries daily.<br /><br />
+
+Another vital part of your living is the accessibility to the internet. At all the accommodation in the town there is a dedicated 50Mbit internet line going into all of the rooms so whatever the students' needs are they will be ok.
+</div>
+   <div id="footer">
+   <p>Copyright&copy; R. George, A. Eksterowicz, D. Anderson, M. Casey, N. Farnsworth. All Rights Reserved.
+      Last updated October 20 2010
+   </p>
+   </div>
+
 </div>
 </div>
 </div>
