--- a/uni.html
+++ b/uni.html
@@ -32,14 +32,21 @@ function MM_swapImage() { //v3.0
 <body onload="MM_preloadImages('images/map/map_1_01.png','images/map/map_1_02.png','images/map/map_1_03.png','images/map/map_1_04.png','images/button_uni_1.png','images/button_living_1.png','images/button_leisure_1.png','images/button_nightlife_1.png','images/button_contact_1.png')">
 <div id="middle">
   <div id="banner"></div>
-  <div id="navbar">
-    <div id="button_1"><a href="uni.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','images/button_uni_1.png',1)"><img src="images/button_uni.png" name="Image5" width="190" height="40" border="0" id="Image5" /></a></div>
-    <div id="button_2"><a href="living.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/button_living_1.png',1)"><img src="images/button_living.png" name="Image6" width="190" height="40" border="0" id="Image6" /></a></div>
-    <div id="button_3"><a href="leisure.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/button_leisure_1.png',1)"><img src="images/button_leisure.png" name="Image7" width="190" height="40" border="0" id="Image7" /></a></div>
-    <div id="button_4"><a href="nightlife.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/button_nightlife_1.png',1)"><img src="images/button_nightlife.png" name="Image8" width="190" height="40" border="0" id="Image8" /></a></div>
-    <div id="button_5"><a href="contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/button_contact_1.png',1)"><img src="images/button_contact.png" name="Image9" width="190" height="40" border="0" id="Image9" /></a></div>
-   </div>
+  
+  <!-- Horizontal Menu -->
+	<div id="MainNav">
+	<ul>
+		<li class="home	"><a href="index.html">Home</a></li>
+		<li class = "first"><a href="uni.html">University</a></li>
+		<li><a href="living.html">Living</a></li>
+		<li><a href="leisure.html">Leisure</a></li>
+		<li><a href="nightlife.html">Nightlife</a></li>
+		<li><a href="contact.html">Contact Us</a></li>
+	</ul>
+	</div>
+  
    <div class="text">
+   <br />
      <h1>University of Harmonia</h1><br />Harmonia was designed as a university town and so naturally has its university at the heart of the town.<br /><br />
  
 The University offers teaching of a high standard across its numerous departments, a wide range of subjects to study from and amazing job opportunities amongst other things. It also has state of the art equipment in all of its departments and facilities. Friendly and approachable staff are also a major asset to the University. <br /><br />
@@ -55,6 +62,12 @@ A radio station is a third example of the universities facilities. The radio sta
 There are many small parks between the various university buildings. These parks add scenery to the students walk between the buildings. They also provided them with areas to rest and meet with other students. As well as having flowers and trees, the parks have statues and sculptors that previous students have made during their time at the university. One of the parks has a statue of the Greek goddess Harmonia.<br /><br />
 <center><img src="images/harmony.jpg" width="300" height="225" />
 </center></div>
+   <div id="footer">
+   <p>Copyright&copy; R. George, A. Eksterowicz, D. Anderson, M. Casey, N. Farnsworth. All Rights Reserved.
+      Last updated October 20 2010
+   </p>
+   </div>
+
 </div>
 </div>
 </div>
