--- a/contact.html
+++ b/contact.html
@@ -32,14 +32,23 @@ function MM_swapImage() { //v3.0
 <body onload="MM_preloadImages('images/map/map_1_01.png','images/map/map_1_02.png','images/map/map_1_03.png','images/map/map_1_04.png','images/button_uni_1.png','images/button_living_1.png','images/button_leisure_1.png','images/button_nightlife_1.png','images/button_contact_1.png')">
 <div id="middle">
   <div id="banner"></div>
-  <div id="navbar">
-    <div id="button_1"><a href="uni.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','images/button_uni_1.png',1)"><img src="images/button_uni.png" name="Image5" width="190" height="40" border="0" id="Image5" /></a></div>
-    <div id="button_2"><a href="living.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/button_living_1.png',1)"><img src="images/button_living.png" name="Image6" width="190" height="40" border="0" id="Image6" /></a></div>
-    <div id="button_3"><a href="leisure.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/button_leisure_1.png',1)"><img src="images/button_leisure.png" name="Image7" width="190" height="40" border="0" id="Image7" /></a></div>
-    <div id="button_4"><a href="nightlife.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/button_nightlife_1.png',1)"><img src="images/button_nightlife.png" name="Image8" width="190" height="40" border="0" id="Image8" /></a></div>
-    <div id="button_5"><a href="contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/button_contact_1.png',1)"><img src="images/button_contact.png" name="Image9" width="190" height="40" border="0" id="Image9" /></a></div>
-   </div>
+  
+    
+  <!-- Horizontal Menu -->
+	<div id="MainNav">
+	<ul>
+		<li class="home	"><a href="index.html">Home</a></li>
+		<li><a href="uni.html">University</a></li>
+		<li><a href="living.html">Living</a></li>
+		<li><a href="leisure.html">Leisure</a></li>
+		<li><a href="nightlife.html">Nightlife</a></li>
+		<li class = "first"><a href="contact.html">Contact Us</a></li>
+	</ul>
+	</div>
+  
+  
    <div class="text">
+   <br />
      <h1>Contact us</h1><br />
      <center><p>If you think that Harmonia might be a place for you, feel free to contact us using the form below!</p></center>
      <center><form name="form1" id="form1" method="post" action="mailto; u1051922@unimail.hud.ac.uk">
@@ -60,6 +69,11 @@ function MM_swapImage() { //v3.0
               </form>
               </center>
 </div>
+   <div id="footer">
+   <p>Copyright&copy; R. George, A. Eksterowicz, D. Anderson, M. Casey, N. Farnsworth. All Rights Reserved.
+      Last updated October 20 2010
+   </p>
+   </div>
 </div>
 </div>
 </div>
