--- a/index.html
+++ b/index.html
@@ -32,24 +32,43 @@ function MM_swapImage() { //v3.0
 <body onload="MM_preloadImages('images/map/map_1_01.png','images/map/map_1_02.png','images/map/map_1_03.png','images/map/map_1_04.png','images/button_uni_1.png','images/button_living_1.png','images/button_leisure_1.png','images/button_nightlife_1.png','images/button_contact_1.png')">
 <div id="middle">
   <div id="banner"></div>
-  <div id="navbar">
-    <div id="button_1"><a href="uni.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','images/button_uni_1.png',1)"><img src="images/button_uni.png" name="Image5" width="190" height="40" border="0" id="Image5" /></a></div>
-    <div id="button_2"><a href="living.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/button_living_1.png',1)"><img src="images/button_living.png" name="Image6" width="190" height="40" border="0" id="Image6" /></a></div>
-    <div id="button_3"><a href="leisure.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/button_leisure_1.png',1)"><img src="images/button_leisure.png" name="Image7" width="190" height="40" border="0" id="Image7" /></a></div>
-    <div id="button_4"><a href="nightlife.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/button_nightlife_1.png',1)"><img src="images/button_nightlife.png" name="Image8" width="190" height="40" border="0" id="Image8" /></a></div>
-    <div id="button_5"><a href="contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/button_contact_1.png',1)"><img src="images/button_contact.png" name="Image9" width="190" height="40" border="0" id="Image9" /></a></div>
-   </div>
+
+
+<!-- Horizontal Menu -->
+	<div id="MainNav">
+	<ul>
+		<li class="first"><a href="index.html">Home</a></li>
+		<li><a href="uni.html">University</a></li>
+		<li><a href="living.html">Living</a></li>
+		<li><a href="leisure.html">Leisure</a></li>
+		<li><a href="nightlife.html">Nightlife</a></li>
+		<li><a href="contact.html">Contact Us</a></li>
+	</ul>
+	</div>
+    
    <div class="text">
+ <br />  
      <h1>Welcome to Harmonia!</h1><br />
-     <h3>History</h3>Harmonia was founded in the year 1649 by a group of intrepid explorers who stumbled on a fantastic utopian area located in the middle of the United Kingdom. Upon discovering this place they thought it best to develop it into a university town as they felt with the idilic surroundings the students in the university would perform better. Because of this development of the town started and due to the vast knowledge that the explorers had the town has prospered into the perfect university town that it now is.</div>
+     Harmonia was founded in the year 1949 by a group of entrepid explorers who stumbled on a fantastic utopian area located in the middle of the United Kingdom. Upon discovering this place they thought it best to develop it into a university town as they felt with the idilic surroundings the students in the university would perform better. Because of this, development of the town started and due to the vast knowledge that the explorers had the town has prospered into the perfect university town that it now is.<br /><br />
+
+Upon arriving at the area the explorers, after deciding that the town should be a university town, they decided to split the town into four sections. One of each of the following: Living, Leisure, University and Nightlife. These four areas are what the explorers felt would be best for students.<br /><br />
+ 
+The town took 5 years to finish and the high standard of education that students receive if they go to the university is a good representation of the time spent by the explorers making everything right. 
+</div>
    <div id="map">
-     <div id="map_01"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','images/map/map_1_01.png',1)"><img src="images/map/map_01.png" name="Image1" width="473" height="198" border="0" id="Image1" /></a></div>
-     <div id="map_02"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','images/map/map_1_02.png',1)"><img src="images/map/map_02.png" name="Image2" width="477" height="198" border="0" id="Image2" /></a></div>
-     <div id="map_03"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image3','','images/map/map_1_03.png',1)"><img src="images/map/map_03.png" name="Image3" width="473" height="302" border="0" id="Image3" /></a></div>
-     <div id="map_04"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image4','','images/map/map_1_04.png',1)"><img src="images/map/map_04.png" name="Image4" width="477" height="302" border="0" id="Image4" /></a></div>
+     <div id="map_01"><a href="uni.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','images/map/map_1_01.png',1)"><img src="images/map/map_01.png" name="Image1" width="473" height="198" border="0" id="Image1" /></a></div>
+     <div id="map_02"><a href="living.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','images/map/map_1_02.png',1)"><img src="images/map/map_02.png" name="Image2" width="477" height="198" border="0" id="Image2" /></a></div>
+     <div id="map_03"><a href="leisure.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image3','','images/map/map_1_03.png',1)"><img src="images/map/map_03.png" name="Image3" width="473" height="302" border="0" id="Image3" /></a></div>
+     <div id="map_04"><a href="nightlife.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image4','','images/map/map_1_04.png',1)"><img src="images/map/map_04.png" name="Image4" width="477" height="302" border="0" id="Image4" /></a></div>
 </div>
 <div class="text"><h2>Harmonia - Where dreams are fabricated.</h2>
 </div>
+   <div id="footer">
+   <p>Copyright&copy; R. George, A. Eksterowicz, D. Anderson, M. Casey, N. Farnsworth. All Rights Reserved.
+      Last updated October 20 2010
+   </p>
+   </div>
+
 </div>
 </div>
 </body>
