--- a/nightlife.html
+++ b/nightlife.html
@@ -32,14 +32,22 @@ function MM_swapImage() { //v3.0
 <body onload="MM_preloadImages('images/map/map_1_01.png','images/map/map_1_02.png','images/map/map_1_03.png','images/map/map_1_04.png','images/button_uni_1.png','images/button_living_1.png','images/button_leisure_1.png','images/button_nightlife_1.png','images/button_contact_1.png')">
 <div id="middle">
   <div id="banner"></div>
-  <div id="navbar">
-    <div id="button_1"><a href="uni.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','images/button_uni_1.png',1)"><img src="images/button_uni.png" name="Image5" width="190" height="40" border="0" id="Image5" /></a></div>
-    <div id="button_2"><a href="living.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/button_living_1.png',1)"><img src="images/button_living.png" name="Image6" width="190" height="40" border="0" id="Image6" /></a></div>
-    <div id="button_3"><a href="leisure.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/button_leisure_1.png',1)"><img src="images/button_leisure.png" name="Image7" width="190" height="40" border="0" id="Image7" /></a></div>
-    <div id="button_4"><a href="nightlife.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/button_nightlife_1.png',1)"><img src="images/button_nightlife.png" name="Image8" width="190" height="40" border="0" id="Image8" /></a></div>
-    <div id="button_5"><a href="contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/button_contact_1.png',1)"><img src="images/button_contact.png" name="Image9" width="190" height="40" border="0" id="Image9" /></a></div>
-   </div>
+    
+  <!-- Horizontal Menu -->
+	<div id="MainNav">
+	<ul>
+		<li class="home	"><a href="index.html">Home</a></li>
+		<li><a href="uni.html">University</a></li>
+		<li><a href="living.html">Living</a></li>
+		<li><a href="leisure.html">Leisure</a></li>
+		<li class = "first"><a href="nightlife.html">Nightlife</a></li>
+		<li><a href="contact.html">Contact Us</a></li>
+	</ul>
+	</div>
+  
+  
    <div class="text">
+   <br />
      <h1>Nightlife</h1><br /><p>Harmonia is able to offer nightlife like no other, now you're wondering what makes me believe that this is the case, correct?<br /><br />
 With its streets full of bars and clubs all with amazing student discounts. It's the ideal place to get as much out of your student loan as possible. After all the money doesn't stretch too far in most places when it comes to alcohol, does it? So why sit in on your own when you could be out with your friends having just as much fun as they are. For those who are stretched for cash why not get yourself a job. All the clubs and bars are run by mainly students within the town. This is to try and put some money back into the community. All jobs are allocated through the university to make interviewing easier as there are far more students than jobs available.<br /><br />
 Harmonia is the kind of place that likes to offer something for everyone. So whatever you style of music, there is something there for you; whether you just like to go out and dance or use the poles or even enter competitions for free alcohol.  Each club in the area has a student offer at least one night a week so you will never be able to turn down a good night out.
@@ -75,6 +83,12 @@ Finally another cost that is a drain on students is the taxi home after a good n
 
 </center>
 </div>
+   <div id="footer">
+   <p>Copyright&copy; R. George, A. Eksterowicz, D. Anderson, M. Casey, N. Farnsworth. All Rights Reserved.
+      Last updated October 20 2010
+   </p>
+   </div>
+
 </div>
 </div>
 </div>
